<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/baseline_search_24"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"
        app:actionViewClass="com.google.android.material.search.SearchView"/>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_sort"
            android:title="@string/sort">
            <menu>
                <item
                    android:id="@+id/priority_high"
                    android:title="@string/high_priority"/>
                <item
                    android:id="@+id/priority_low"
                    android:title="@string/low_priority"/>
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all_chores"
        app:showAsAction="never" />


</menu>